--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       username: root
       password: xuxin158263
   redis:
-    host: 192.168.236.130
+    host: 192.168.198.128
     password: xx158263
     port: 6379
     lettuce:
@@ -27,3 +27,9 @@ logging:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+
+#分页插件
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
