--- a/mvc/pom.xml
+++ b/mvc/pom.xml
@@ -35,6 +35,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.scut</groupId>
+            <artifactId>jwt</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <!--连接池依赖-->
         <dependency>
             <groupId>org.apache.commons</groupId>
